[package]
name = "expect_macro"
version = "0.0.0"
authors = ["codeure24 <85784092+antoineB24@users.noreply.github.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0.18", features = ["full"] }


