[package]
name = "expect_macro"
version = "0.0.0"
authors = ["NightProg <85784092+NightProg@users.noreply.github.com>"]
description = "This crate is used to generate a expected method for each variant of an enum."
keywords = ["expect_macro", "proc_macro", "procmacro"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/NightProg/expect_macro_rs.git"
homepage = "https://github.com/NightProg/expect_macro_rs.git"


[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0.18", features = ["full"] }


